Adaptations for Chromium 78
Including removal of renderer service.

[ChangeLog][QWebEngineSetting] XSS Auditing has been removed, and
XSSAuditingEnabled no longer has any effect.

Change-Id: I0835e2a76551057f3eea30a343e0373b642192f0
Reviewed-by: Allan Sandfeld Jensen <allan.jensen@qt.io>

--- a/src/buildtools/configure.json
+++ b/src/buildtools/configure.json
@@ -264,10 +264,11 @@
                 "main": [
                     "vpx_codec_cx_pkt pkt;",
                     "pkt.data.frame.width[0] = 0u;",
-                    "pkt.data.frame.height[0] = 0u;"
+                    "pkt.data.frame.height[0] = 0u;",
+                    "auto a = CONSTRAINED_FROM_ABOVE_DROP;"
                 ]
             },
-            "headers": "vpx/vpx_encoder.h",
+            "headers": [ "vpx/vpx_encoder.h", "vpx/vp8cx.h" ],
             "sources": [
                 { "type": "pkgConfig", "args": "vpx" },
                 "-lvpx"
