--- a/src/core/qtwebengine_sources.gni
+++ b/src/core/qtwebengine_sources.gni
@@ -67,6 +67,8 @@ source_set("qtwebengine_sources") {
     "//chrome/browser/profiles/profile.h",
     "//chrome/browser/ui/webui/devtools_ui.cc",
     "//chrome/browser/ui/webui/devtools_ui.h",
+    "//chrome/browser/ui/webui/devtools_ui_data_source.cc",
+    "//chrome/browser/ui/webui/devtools_ui_data_source.h",
     "//chrome/browser/ui/webui/quota_internals/quota_internals_handler.cc",
     "//chrome/browser/ui/webui/quota_internals/quota_internals_handler.h",
     "//chrome/browser/ui/webui/quota_internals/quota_internals_proxy.cc",
